--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,16 +41,10 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
 
-flutter_launcher_icons:
+flutter_launcher_icons:  # ✅ USE THIS, not flutter_icons
   android: true
-  # ios: true
-  image_path: "assets/images/logo-icon.jpg"  # Your icon path
-  # The "flutter_lints" package below contains a set of recommended lints to
-  # encourage good coding practices. The lint set provided by the package is
-  # activated in the `analysis_options.yaml` file located at the root of your
-  # package. See that file for information about deactivating specific lint
-  # rules and activating additional ones.
-  flutter_lints: ^5.0.0
+  ios: true
+  image_path: "assets/images/logo-icon.jpg"  # ✅ Replace with your correct icon path
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
