--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  flutter_launcher_icons: ^0.13.1  # ✅ Use the latest version of flutter_launcher_icons
 
 flutter_launcher_icons:  # ✅ USE THIS, not flutter_icons
   android: true
